added content in readme file

--- a/migrations/README
+++ b/migrations/README
@@ -40,4 +40,21 @@ A Flask REST API for managing Late Show episodes, guests, and appearances.
 pipenv install
 pipenv shell
 
+##Run database migrations
+.flask db upgrade
+
+##Seed the database
+python3 seed.py
+
+##Start the server
+python3 app.py
+
+##The API will be available at:
+http://127.0.0.1:5000
+
+
+
+
+
+
 
